[gd_scene load_steps=2 format=3 uid="uid://cyqcloy3n7m15"]

[ext_resource type="Script" path="res://Scene/CoinMagnet/coin_magnet.gd" id="1_5c8a6"]

[node name="CoinMagnet" type="Area3D" node_paths=PackedStringArray("collision_shape")]
collision_layer = 0
collision_mask = 32
script = ExtResource("1_5c8a6")
collision_shape = NodePath("")

[connection signal="area_entered" from="." to="." method="_on_magnet_area_body_entered"]
[connection signal="area_exited" from="." to="." method="_on_magnet_area_body_exited"]
